Mon Apr 11 10:03:45 2005  Ciju John  <john_c@ociweb.com>

        * tao/Transport.cpp (dump_iov):
          Fixed bus error. Problem due to interpretting integer as a string.

Mon Apr 11 15:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Commit on behalf of Chris Cleeland, improved documentation of
          -ORBClientConnectionHandler and -ORBWaitStrategy

        * tao/PortableServer/*.pidl:
          Updated regeneration instructions to not list -GT

        * tao/PortableServer/*C.{h,cpp,inl}:
        * tao/PortableServer/*S.{h,cpp}:
        * tao/PortableServer/*A.cpp:
          Regenerated but now not generation explicit template instantiations

        * tao/PortableServer/diffs/*:
          Updated

Mon Apr 11 15:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/*.pidl:
          Updated regeneration instructions to not list -GT

        * tao/ImR_Client/*C.{h,cpp,inl}:
        * tao/ImR_Client/*S.{h,cpp}:
        * tao/ImR_Client/*A.cpp:
          Regenerated but now not generation explicit template instantiations

Mon Apr 11 11:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rules.tao.GNU:
          When templates is set to explicit print out an error that explicit
          templates are not usable anymore with TAO.

        * TAO-INSTALL.html:
          Document that explicit templates are not usable anymore for TAO

Mon Apr 11 09:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_valuetype.cpp:
          Instead of TAO_NAMESPACE_STORAGE_CLASS generate extern with the
          stub export macro

Mon Apr 11 09:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
          Subscribe before set_sock_opt

Mon Apr 11 09:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Naming_Client.cpp: